overflow issue

--- a/style/components/singlegame.less
+++ b/style/components/singlegame.less
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  overflow: visible;
+  overflow: hidden;
   .content {
     height: 100%;
     width: 100%;
